<resources>
    <string name="app_name">Call Out Express</string>
    <string name="mns_init">Contacts block</string>
    <string name="recent_call">Select recent Call</string>
    <string name="op1">Contacts</string>
    <string name="op2">Call log</string>
    <string name="op3">Insert number</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="insert_name">Insert name</string>
    <string name="insert_phone">Insert phone</string>
    <string name="error_insert">Error while inserting</string>
    <string name="number_null">Number can not be null</string>
    <string name="block_number_title">List of blocked number</string>
    <string name="delete">Delete</string>
    <string name="action_settings">About</string>
    <string name="about">Blocking express calls \n was made by having the need to quickly and easily block bank insurance numbers that wanted to sell something, follow my blog, you ll find programmin topics 😉</string>
    <string name="web">http://unprogramador.com</string>
    <string name="notaccess">Add permissions to the app</string>
    <string name="shortBlock">Block</string>
    <string name="shortLongBlock">Number Blocker</string>
    <string name="shortDisable">Blocks</string>
    <string name="shortInfo">Info</string>
    <string name="shortLongInfo">Infromation app</string>
    <string name="shortDisableInfo">Infos</string>
    <string name="ShortLongBlock">Number blocker</string>
</resources>
