<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="block"
        android:enabled="true"
        android:icon="@drawable/ic_block_black_24dp"
        android:shortcutShortLabel="@string/shortBlock"
        android:shortcutLongLabel="@string/shortLongBlock"
        android:shortcutDisabledMessage="@string/shortDisable">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="unprogramador.com.calloutexpress"
            android:targetClass="unprogramador.com.calloutexpress.AddCallLog" />
        <categories android:name="android.shortcut.block" />
    </shortcut>
    <shortcut
        android:shortcutId="info"
        android:enabled="true"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:shortcutShortLabel="@string/shortInfo"
        android:shortcutLongLabel="@string/shortLongInfo"
        android:shortcutDisabledMessage="@string/shortDisableInfo">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="unprogramador.com.calloutexpress"
            android:targetClass="unprogramador.com.calloutexpress.About" />
        <categories android:name="android.shortcut.About" />
    </shortcut>
</shortcuts>