<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="unprogramador.com.calloutexpress.AddCallLog">

    <EditText
        android:id="@+id/insertname"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/insert_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/insertphone"
        style="@android:style/Widget.Material.EditText"
        android:hint="@string/insert_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insertname" />

    <Button
        android:id="@+id/cancelb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/cancel"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/saveb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/save"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/deleteb"
        style="@style/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/delete"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@+id/cancelb"

        app:layout_constraintRight_toLeftOf="@+id/saveb"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp" />
</android.support.constraint.ConstraintLayout>
